<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>frmGaugeProgressBar</class>
 <widget class="QWidget" name="frmGaugeProgressBar">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>500</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout" name="gridLayout_2">
   <item row="0" column="0" colspan="4">
    <widget class="QWidget" name="widget" native="true">
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
       <widget class="GaugeProgressBar" name="gaugeProgressBar1"/>
      </item>
      <item row="0" column="1">
       <widget class="GaugeProgressBar" name="gaugeProgressBar2"/>
      </item>
      <item row="0" column="2">
       <widget class="GaugeProgressBar" name="gaugeProgressBar3"/>
      </item>
      <item row="1" column="0">
       <widget class="GaugeProgressBar" name="gaugeProgressBar4"/>
      </item>
      <item row="1" column="1">
       <widget class="GaugeProgressBar" name="gaugeProgressBar5"/>
      </item>
      <item row="1" column="2">
       <widget class="GaugeProgressBar" name="gaugeProgressBar6"/>
      </item>
     </layout>
    </widget>
   </item>
   <item row="1" column="0">
    <widget class="QCheckBox" name="ckShowPointer">
     <property name="text">
      <string>显示指针</string>
     </property>
    </widget>
   </item>
   <item row="1" column="1">
    <widget class="QCheckBox" name="ckShowValue">
     <property name="text">
      <string>显示值</string>
     </property>
    </widget>
   </item>
   <item row="1" column="2">
    <widget class="QComboBox" name="cboxPointerStyle">
     <item>
      <property name="text">
       <string>圆形指示器</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>指针指示器</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>圆角指针指示器</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>三角指示器</string>
      </property>
     </item>
    </widget>
   </item>
   <item row="1" column="3">
    <widget class="QSlider" name="horizontalSlider">
     <property name="maximum">
      <number>100</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>GaugeProgressBar</class>
   <extends>QWidget</extends>
   <header>gaugeprogressbar.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
